--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
@@ -229,7 +233,7 @@
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241439-junior-ux-designer-m-f-x-'>Netcentric Junior UX-Designer (m/f/x) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241439-junior-ux-designer-m-f-x-'>Netcentric Junior UX-Designer (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -293,7 +297,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply to UX Program Manager at IntelliPro Group Inc. in Mountain View, CA.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PTDefiniteMajiArsana/743999697601029-ux-design-lead'>PT. Definite Maji Arsana UX Design Lead | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PTDefiniteMajiArsana/743999697601029-ux-design-lead'>PT. Definite Maji Arsana UX Design Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Indonesia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -309,7 +313,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/ui-ux-agile-design-engineer-7157'>UI / UX Agile Design Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/ui-ux-agile-design-engineer-7157'>UI / UX Agile Design Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -417,11 +421,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://magazino.join.com/jobs/457417-ux-entwickler-m-w-x'>Job @ Magazino (M?nchen): UX Entwickler (m/w/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://magazino.join.com/jobs/457417-ux-entwickler-m-w-x'>Job @ Magazino (M?nchen): UX Entwickler (m/w/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nltblMwB'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nltblMwB'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -429,7 +433,7 @@
 <p><span class="badge badge-light">Toronto, Ontario  Austin, Texas Toronto, Canada Toronto Austin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/certainaffinity/job/obSpbfwn'>Certain Affinity, Inc. Careers - UI/UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/certainaffinity/job/obSpbfwn'>Certain Affinity, Inc. Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas  Austin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -437,7 +441,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/FD70A9A46D'>User Experience - UX Writer - Aviso Wealth</a></h5> 
+<h5><a href='https://www.workable.com/j/FD70A9A46D'>User Experience - UX Writer - Aviso Wealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... As an advocate for our users, the role will help to shape the best customer 
 experience by ensuring our product is intuitive and engaging to use. Who you are
@@ -466,12 +470,6 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <hr/>
 <h5><a href='http://20bn.applytojob.com/apply/SSXl3hp9lA/UIUX-Developer-iOS'>UI/UX Developer (iOS) - Twenty Billion Neurons GmbH - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://nrb.recruitee.com/o/web-uiux-designer'>
-      Web UI/UX Designer - NRB
-    </a></h5> 
-<p><span class="badge badge-light">Greece  Greece</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
 
